--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ cache:
 before_install:
   - rm .env.dist
   - mv .env.travis .env
-  - composer self-update
+  - travis_retry composer self-update
 
 install:
-  - composer install --no-interaction --prefer-dist
+  - travis_retry composer install --no-interaction --prefer-dist
 
 before_script:
   - bin/console doctrine:database:create
@@ -48,6 +48,7 @@ script:
   - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
   - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
   - ./vendor/bin/phpstan analyse --level=max ./src ./tests
-  - php -S localhost:8000 -t public/ public/index.php &
-  - ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
+  - |
+      php -S localhost:8080 -t public/ public/index.php > /dev/null 2>&1 &
+      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
 
