--- a/.travis.yml
+++ b/.travis.yml
@@ -41,14 +41,15 @@ before_script:
   - bin/console cache:warmup --no-interaction
 
 script:
-  - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
-  - ./bin/console lint:yaml config
-  - ./bin/console lint:twig templates
-  - composer validate --strict
-  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
-  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
-  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
+#  - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
+#  - ./bin/console lint:yaml config
+#  - ./bin/console lint:twig templates
+#  - composer validate --strict
+#  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
+#  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
+#  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
   - |
       php -S localhost:8080 -t public/ public/index.php > /dev/null 2>&1 &
-      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
+      curl http://localhost:8080/
+#      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
 
