--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
 #  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
 #  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
   - |
-      nohup php -S localhost:8080 -t public/ public/index.php > /dev/null 2>&1 &
+      php -S localhost:8080 -t public/ public/index.php
       curl http://localhost:8080/
 #      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
 
