--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,8 @@ script:
 #  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
 #  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
 #  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
-  - php -S localhost:8080 -t public/ public/index.php > php-server.log 2>&1 &
-  - cat php-server.log
-  - curl http://localhost:8080/
+  - php -S localhost:8080 -t public/ public/index.php
+#  - curl http://localhost:8080/
 
 #      curl http://127.0.0.1:8080/
 #      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
