--- a/.env.travis
+++ b/.env.travis
@@ -1,4 +1,4 @@
-APP_ENV=test
+APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
 DATABASE_URL=postgres://postgres@localhost:5432/beeriously
