--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,6 +29,10 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    Beeriously\Application\Testing\:
+        resource: '../src/Application/Testing'
+        tags: ['console.command']
+
     Beeriously\Application\SessionHandler\PdoConnectionDsnProviderInterface:
         class: Beeriously\Application\SessionHandler\DoctrineConnectionToPdoDsnAdapter
 
